--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24",
     "vue": "^3.2.25",
